--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 
 				<p class="menu__intro">Please note that this restaurant requires that each diner order two courses, one of which must be a main. Enjoy!</p>
 
+				<!-- Menu gets inserted here by JavaScript v-->
+				<div class="menu__entry"></div>
+
 				<p class="menu__cost">&pound;0.00</p>
 
 				<input class="menu__order" type="submit" name="submit" value="Order Now">
@@ -60,7 +63,7 @@
 		</main>
 
 		<!-- Script to deploy -->
-		<script src="/dist/js/main.js"></script>
+		<script src="/dist/js/build.js"></script>
 
 	</body>
 
