--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 					
 					<h1 class="intro__title">Welcome to the tech test restaurant!</h1>
 
-					<p class="intro__text">Please select from the following dishes and we'll get them to you as soon as possible. Enjoy your meal!</p>
+					<p class="intro__text">Please select from the following dishes and we'll deliver them to your door. Thanks for your custom and enjoy your meal!</p>
 
 				</div>
 
 			</div>
 
-			<form class="menu" action="">
+			<form id="menu" class="menu" action="#">
 
 				<!-- Menu gets inserted here by JavaScript v-->
 				<div class="menu__wrapper">
@@ -57,17 +57,27 @@
 
 					<p class="menu__intro">Please note that this <strong>restaurant requires that each diner order two courses, one of which must be a main</strong>. Enjoy!</p>
 
+					<img src="/img/pierre__waiter.png" alt="Pierre the snobby waiter" class="menu__waiter">
+
 				</div>
 
 				<div class="menu__summary">
+
+					<div id="js-menu-error-log" class="menu__errors">
+						<!-- These error messages start off with display none, this will also hide them from screenreaders -->
+						<p id="js-error-limit" class="menu__error">Sorry, we only have one piece of cheesecake left.</p>
+						<p id="js-error-waiter" class="menu__error">Pierre our esteemed waiter says he cannot let you make the mistake of ordering both the prawn cocktail and salmon. Please choose again!</p>
+						<p id="js-error-minimum" class="menu__error">Sorry, this restaurant's rules state that each diner must have at least two courses, one of which must be a main.</p>
+						<p id="js-success-message" class="menu__success">Thank you for your order!</p>
+					</div>
 					
 					<div class="menu__cost-wrapper">
 						<h3 class="menu__cost-title">Your total:</h3>
-						<p class="menu__total">&pound;0.00</p>
+						<p id="js-menu-total" class="menu__total">&pound;0.00</p>
 					</div>
 
 					<div class="menu__order">
-						<input class="menu__button" type="submit" name="submit" value="Order Now">
+						<input id="js-submit-button" class="menu__button" type="submit" name="submit" value="Order Now">
 					</div>
 
 				</div>
