Add various comments and tweak spacing in some files

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 
 		<link rel="stylesheet" href="/dist/css/main.css">
 
-		<!-- Favicon credit - Aldric Rodríguez, Noun Project -->
-		<link rel="shortcut icon" href="/img/favicon.ico">
+		<!-- Waiter image credit - Stefania Servidio, Noun Project -->
 
 		<!--[if lt IE 9]>
 			<script src="/js/vendor/html5shiv.min.js"></script>
@@ -50,14 +49,14 @@
 
 			<form id="menu" class="menu" action="#">
 
-				<!-- Menu gets inserted here by JavaScript v-->
+				<!-- Menu gets appended to this div by JavaScript -->
 				<div class="menu__wrapper">
 					
 					<h2 class="menu__title">Please select your food choices.</h2>
 
 					<p class="menu__intro">Please note that this <strong>restaurant requires that each diner order two courses, one of which must be a main</strong>. Enjoy!</p>
 
-					<img src="/img/pierre__waiter.png" alt="Pierre the snobby waiter" class="menu__waiter">
+					<img class="menu__waiter" src="/img/pierre__waiter.png" alt="Pierre the snobby waiter">
 
 				</div>
 
