Add up next section to README. Amend typo in index.html.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<div id="js-menu-error-log" class="menu__errors">
 						<!-- These error messages start off with display none, this will also hide them from screenreaders -->
 						<p id="js-error-limit" class="menu__error">Sorry, we only have one piece of cheesecake left.</p>
-						<p id="js-error-waiter" class="menu__error">Pierre our esteemed waiter says he cannot let you make the mistake of ordering both the prawn cocktail and salmon. Please choose again!</p>
+						<p id="js-error-waiter" class="menu__error">Pierre our esteemed waiter says he cannot let you make the mistake of ordering both the Prawn Cocktail and Salmon Fillet. Please choose again!</p>
 						<p id="js-error-minimum" class="menu__error">Sorry, this restaurant's rules state that each diner must have at least two courses, one of which must be a main.</p>
 						<p id="js-success-message" class="menu__success">Thank you for your order!</p>
 					</div>
